--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* bootstrap: Add default $auxdir value.  ltmain.m4sh
+	is prerequisite to ltmain.sh.  Improve warning message.
+
 2005-08-18  Gary V. Vaughan  <gary@gnu.org>
 	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
