--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-08-24  Peter O'Gorman  <peter@pogma.com>
+
+	* libltdl/config/ltmain.m4sh (inherited_linker_flags): Work when
+	output is an application too.
+	Reported by Christopher Egger <Christoph_Egger@gmx.de>
+
 2005-08-23  Stepan Kasal  <kasal@ucw.cz>,
 	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
