--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-24  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* tests/fcdemo/Makefile.am (suffix rules): Explicitly add
+	$(FCFLAGS_f90) so the tests can pass on AIX.
+
 2005-08-24  Peter O'Gorman  <peter@pogma.com>
 
 	* libltdl/config/ltmain.m4sh (inherited_linker_flags): Work when
