--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2005-08-24  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* libltdl/m4/libtool.m4 (_LT_COMPILER_C_O): Send chmod warning to log.
+
 	* tests/defs.m4sh (m4dir, auxdir, scripts): Fix for source tree
 	reorganization.
 	* tests/sh.test: Adjust.  Also barf on sed diagnostics so this
