--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-08-25  Peter Ekberg  <peda@lysator.liu.se>
+	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* tests/standalone.at: (without autotools): Add
+	$(CFLAGS) to LTCOMPILE and LTLINK. Separate compiling
+	and linking. Remove compiling flags from link. Add
+	--tag. Add -no-undefined flag.
+
 2005-08-24  Bruno Haible  <bruno@clisp.org>
 
 	* libltdl/config/ltmain.sh (func_mode_install): Try "ln -s -f"
