--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-08-29  Gary V. Vaughan  <gary@gnu.org>
+
+	* libltdl/m4/ltdl.m4 (LTDL_CONVENIENCE): Fix the comment to not
+	pretend that LIBLTDL and LTDLINCL are not AC_SUBSTed here.
+	* doc/libtool.texi (Distributing libltdl):  Update the
+	documentation to match the advice given in HEAD.  Don't tell
+	the user they have to AC_SUBST again.
+
 2005-08-24  Bruno Haible  <bruno@clisp.org>
 
 	* ltmain.in (install mode): Try "ln -s -f" and "rm -f && ln -s"
@@ -84,7 +92,7 @@
 
 2005-07-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
-	* tests/defs (make): Undo bogus change I did, and also 
+	* tests/defs (make): Undo bogus change I did, and also
 	wrongly attributed to Derek R. Price.
 
 2005-07-08  Derek R. Price  <derek@ximbiot.com>
