--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-08-29  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* Makefile.am: Install libltdl data files in correct order.
+	Use pre-defined programs for installation; use NORMAL_INSTALL
+	and NORMAL_UNINSTALL.  Really fix ownership and timestamp
+	problems.  Fix typo in uninstallation of aclocal files.
+	Reported by Peter Breitenlohner <peb@mppmu.mpg.de> and
+	Charles Wilson <cygwin@cwilson.fastmail.fm>.
+
 2005-08-29  Gary V. Vaughan <gary@gnu.org>,
 	    Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
