--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-30  Gary V. Vaughan  <gary@gnu.org>
+
+	* libltdl/m4/libtool.m4 (_LT_SETUP): Remove duplicate
+	--enable-libtool-lock declaration.
+
 2005-08-29  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/m4/libtool.m4 (_LT_SYS_DYNAMIC_LINKER)
