--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-31  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* README, libtool.m4 [ solaris CC ]: Document issue with C++
+	standard libraries.
+
 2005-08-29  Gary V. Vaughan  <gary@gnu.org>
 
 	* libltdl/m4/ltdl.m4 (LTDL_CONVENIENCE): Fix the comment to not
