--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-31  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/m4/libtool.m4 [ solaris CC ]: Document issue with C++
+	standard libraries.
+
 2005-08-30  Gary V. Vaughan  <gary@gnu.org>
 
 	* libltdl/m4/ltoptions.m4 (AC_LIBTOOL_PIC_MODE): Renamed...
