--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2005-08-31  Gary V. Vaughan <gary@gnu.org>,
+	    Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/m4/ltoptions.m4 (_LT_SET_OPTIONS): Move option macro
+	dipatch..
+	(_LT_SET_OPTION): here.  Do not fail but warn on unknown
+	options.
+	(_LT_UNLESS_OPTIONS(win32-dll), LT_OPTION_DEFINE(dlopen)):
+	Add whitespace.
+	Reported by Robert Ögren <lists@roboros.com> and
+	Akim Demaille <akim@lrde.epita.fr>.
+
 2005-08-31  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/m4/libtool.m4 [ solaris CC ]: Document issue with C++
