--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-09-01  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/m4/ltoptions.m4 (_LT_SET_OPTIONS): m4_defun this..
+	* libltdl/m4/libtool.m4 (LT_INIT): so it can be m4_require'd
+	from here with user-supplied options.  Fixes output macro
+	ordering issue.
+
 2005-09-01  Gary V. Vaughan  <gary@gnu.org>
 
 	* libtoolize.m4sh (func_scan_files): When searching for evidence
