--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-09-01  Gary V. Vaughan  <gary@gnu.org>
+
+	* doc/libtool.texi (LT_INIT): Fix a logical error with
+	documentation of --with-pic vs --without-pic.
+
 2005-09-01  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/m4/ltoptions.m4 (_LT_SET_OPTIONS): m4_defun this..
