--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-09-01  Peter O'Gorman  <peter@pogma.com>
+
+	* libltdl/m4/libtool.m4 (old_postintall_cmds): chmod 644 before
+	running ranlib.
+	Reported by Gerald Pfeifer <gerald@pfeifer.com>
+
 2005-09-01  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/m4/libtool.m4 (_LT_PROG_CXX, _LT_PROG_F77)
