--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-09-01  Peter O'Gorman  <peter@pogma.com>
+
+	* libtool.m4 (old_postintall_cmds): chmod 644 before running
+	ranlib.
+	Reported by Gerald Pfeifer <gerald@pfeifer.com>
+
 2005-08-31  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* configure.ac: Bump version.
