--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-09-06  Roger Cornelius  <rac@tenzing.org>
+
+	* libltdl/m4/libtool.m4 (AC_DEPLIBS_CHECK_METHOD)
+	[ sysv5OpenUNIX8, sysv5UnixWare7, sysv5uw[78], unixware7,
+	sysv4*uw2* ]: Match special cases before general case.
+
 2005-09-05  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
 	* bootstrap: another AIX sed fix.
