--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-09-08  Peter Ekberg  <peda@axentia.se>
+
+	* libltdl/m4/libtool.m4 (_LT_CMD_GLOBAL_SYMBOLS) [dumpbin]:
+	Symbols in "pick any" sections are not global. Use
+	awk, not sed, in the global_symbol_pipe so that keeping
+	track of sections is easier.
+	* doc/libtool.texi (libtool script contents): Update to hint
+	at new findings concerning "pick any" sections.
+
 2005-09-08  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
 	* tests/early-libtool.at (config.status): Use EXEEXT
