--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-09-09  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* ltmain.in (link mode): Actually provide a useful error
+	message.  Fixes long-standing shameful user neglection.
+	Reported by Martin Paljak <martin.paljak@gmail.com>.
+
 2005-09-08  Charles Wilson  <cygwin@cwilson.fastmail.fm>
 
 	* libtool.m4 (AC_LIBTOOL_LANG_CXX_CONFIG)
