--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-09-10  Gary V. Vaughan  <gary@gnu.org>
+
+	* libtoolize.m4sh (TAR): Allow the user to override the tar
+	command.
+
 2005-09-09  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/m4/libtool.m4 (_LT_COMPILER_BOILERPLATE)
